<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_text"
            android:text="@string/amount_input" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColor"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/ars" />
            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="40sp"
                android:textColor="@color/textColor"
                android:text="@string/amount_holder"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shimmer_color"/>
    <TableLayout
        android:id="@+id/tlIntKeyboard"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/tvOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/one"/>
            <TextView
                android:id="@+id/tvTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/two"/>
            <TextView
                android:id="@+id/tvThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/three"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/tvFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/four"/>
            <TextView
                android:id="@+id/tvFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/five"/>
            <TextView
                android:id="@+id/tvSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/six"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/tvSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/seven"/>
            <TextView
                android:id="@+id/tvEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/eight"/>
            <TextView
                android:id="@+id/tvNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/nine"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvZero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                style="@style/grid_keyboard"
                android:text="@string/zero"/>
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:padding="30dp"
                app:srcCompat="@drawable/ic_backspace"
                style="@style/grid_keyboard"
                android:contentDescription="@string/back"
                android:text="@string/nine"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btConfirm"
        android:text="@string/confirm"
        style="@style/full_width_button_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>