<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_text"
            android:text="@string/amount_input" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColor"
                android:textSize="23sp"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/ars" />
            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/amount_holder">
                <requestFocus/>
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btConfirm"
        android:text="@string/confirm"
        style="@style/full_width_button_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
